[package]
name = "FrontlineBot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
